--- a/apps/service-scrape/function-query_freemium/package.json
+++ b/apps/service-scrape/function-query_freemium/package.json
@@ -1,9 +1,12 @@
 {
     "name": "@service-scrape/function-query_freemium",
     "private": true,
+    "exports": {
+        ".": "./api/index.ts"
+    },
     "scripts": {
         "format": "biome format --write",
-        "build": "node openapi.ts && biome format --write",
+        "build": "node api/openapi.ts && biome format --write",
         "test:type": "tsc"
     },
     "dependencies": {
