--- a/apps/frontend/api/package.json
+++ b/apps/frontend/api/package.json
@@ -9,9 +9,7 @@
         "build": "node src/mergeOpenapi.ts && openapi-typescript --array-length true --properties-required-by-default true src/openapi.json -o src/schema.d.ts && biome format --write"
     },
     "dependencies": {
-        "@service-scrape/function-query_freemium": "workspace:*",
-        "openapi-fetch": "^0.14.0",
-        "openapi-react-query": "^0.5.1"
+        "@service-scrape/function-query_freemium": "workspace:*"
     },
     "type": "module",
     "devDependencies": {
