--- a/apps/frontend/web/package.json
+++ b/apps/frontend/web/package.json
@@ -29,6 +29,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.476.0",
+        "openapi-fetch": "^0.14.0",
+        "openapi-react-query": "^0.5.1",
         "react": "^19.1.1",
         "react-aria-components": "^1.12.2",
         "react-dom": "^19.1.1",
