--- a/apps/frontend/web/tsconfig.json
+++ b/apps/frontend/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["**/*.ts", "**/*.tsx", "../infra.ts"],
+    "include": ["**/*.ts", "**/*.tsx", "**/dist", "**/.sst"],
     "compilerOptions": {
         "target": "ES2022",
         "jsx": "react-jsx",
@@ -18,7 +18,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true,
-        "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
         }
