--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
         /* do not output */
         "noEmit": true
     },
-    "exclude": ["**/dist", "**/.puppeteer", "**/cdk.out"]
+    "exclude": ["**/dist", "**/.puppeteer", "**/cdk.out", "**/.sst"]
 }
