--- a/apps/frontend/web/package.json
+++ b/apps/frontend/web/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@clerk/clerk-react": "^5.47.0",
+        "@frontend/api": "workspace:*",
         "@radix-ui/react-collapsible": "^1.1.12",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -21,12 +22,15 @@
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tailwindcss/vite": "^4.1.13",
         "@tanstack/react-devtools": "^0.2.2",
+        "@tanstack/react-query": "^5.90.11",
         "@tanstack/react-router": "^1.131.44",
         "@tanstack/react-router-devtools": "^1.131.44",
         "@tanstack/router-plugin": "^1.131.44",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.476.0",
+        "openapi-fetch": "^0.14.0",
+        "openapi-react-query": "^0.5.1",
         "react": "^19.1.1",
         "react-aria-components": "^1.12.2",
         "react-dom": "^19.1.1",
@@ -42,8 +46,6 @@
         "@vite-pwa/assets-generator": "^1.0.2",
         "@vitejs/plugin-react": "^4.7.0",
         "shadcn": "^3.3.0",
-        "typescript": "^5.9.2",
-        "vite": "^6.3.6",
         "vite-plugin-pwa": "^1.1.0"
     }
 }
