--- a/apps/service-scrape/function-query_freemium/package.json
+++ b/apps/service-scrape/function-query_freemium/package.json
@@ -10,9 +10,7 @@
         "test:type": "tsc"
     },
     "dependencies": {
-        "@hono/otel": "^0.6.0",
         "@observability/lib-opentelemetry": "workspace:*",
-        "@orpc/client": "^1.11.3",
         "@orpc/openapi": "^1.11.3",
         "@orpc/server": "^1.11.3",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
@@ -22,7 +20,6 @@
     },
     "type": "module",
     "devDependencies": {
-        "@orpc/zod": "^1.11.3",
-        "openapi-typescript": "^7.9.1"
+        "@orpc/zod": "^1.11.3"
     }
 }
