ignore sst-env.d.ts formatting

--- a/biome.json
+++ b/biome.json
@@ -37,7 +37,8 @@
             "!**/cdk.out",
             "!.nx",
             "!**/src/routeTree.gen.ts",
-            "!.sst/*"
+            "!.sst/*",
+            "**/sst-env.d.ts"
         ],
         "ignoreUnknown": true
     },
