--- a/apps/service-scrape/function-scrape_locality/dockerfile
+++ b/apps/service-scrape/function-scrape_locality/dockerfile
@@ -1,9 +1,8 @@
-FROM --platform=linux/amd64 node:24.11.1-trixie-slim
+FROM --platform=linux/arm64 node:24.11.1-trixie-slim
 
 WORKDIR /app
 COPY ./src/asset /app/asset
 COPY ./package.json /app/package.json
 COPY ./dist /app
 
-ENTRYPOINT ["node"]
-CMD ["/app/index.js"]
+CMD ["node", "/app/index.js"]
