--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "format": "biome format --write",
         "build": "node esbuild.ts",
-        "puppeteer": "pnpm dlx @puppeteer/browsers install chrome-headless-shell@stable && mv ./chrome-headless-shell/*/* ./.puppeteer && rm -r chrome-headless-shell",
+        "dev": "docker compose up --build --force-recreate",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
         "test:dev": "vitest --coverage"
@@ -18,13 +18,13 @@
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-australia_amenity": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
-        "@sparticuz/chromium-min": "^138.0.2",
+        "@sparticuz/chromium-min": "^143.0.0",
         "@turf/turf": "7.2.0",
         "async-retry": "^1.3.3",
         "cheerio": "1.1.2",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
-        "puppeteer-core": "^24.19.0",
+        "playwright": "^1.57.0",
         "zod": "4.0.17"
     },
     "type": "module"
