--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -40,7 +40,7 @@ jobs:
           DB_SERVICE_SCRAPE: ${{ secrets.DB_SERVICE_SCRAPE }}
 
       - name: Deploy SST infrastructure
-        run: pnpm sst deploy --stage production
+        run: pnpm sst deploy --print-logs --stage production
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
