--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.3",
+        "@pulumi/pulumi": "^3.212.0",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.25.9",
