--- a/apps/service-scrape/function-scrape_locality_trigger/package.json
+++ b/apps/service-scrape/function-scrape_locality_trigger/package.json
@@ -12,6 +12,7 @@
         "pino-pretty": "13.1.1"
     },
     "dependencies": {
+        "@aws-sdk/client-batch": "^3.948.0",
         "@aws-sdk/client-sqs": "^3.876.0",
         "@middy/core": "^6.4.4",
         "@observability/lib-opentelemetry": "workspace:*",
