--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.3",
-        "@types/aws-lambda": "8.10.153",
+        "@pulumi/pulumi": "^3.212.0",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
-        "aws-cdk": "2.1029.0",
         "esbuild": "^0.25.9",
         "knip": "5.63.1",
         "nx": "21.5.2",
         "simple-git-hooks": "2.13.1",
-        "sst": "3.17.14",
+        "sst": "3.17.25",
         "syncpack": "14.0.0-alpha.19",
         "typescript": "~5.9.2",
         "vite": "^7.1.10",
