--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -3,30 +3,28 @@
     "private": true,
     "scripts": {
         "format": "biome format --write",
-        "puppeteer": "pnpm dlx @puppeteer/browsers install chrome-headless-shell@stable && mv ./chrome-headless-shell/*/* ./.puppeteer && rm -r chrome-headless-shell",
+        "build": "node esbuild.ts",
+        "dev": "docker compose up --build --force-recreate",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
         "test:dev": "vitest --coverage"
     },
     "devDependencies": {
         "@types/async-retry": "^1.4.9",
-        "chromium-bidi": "^8.0.0"
+        "chromium-bidi": "^8.0.0",
+        "esbuild": "^0.27.0"
     },
     "dependencies": {
-        "@aws-lambda-powertools/parser": "^2.25.2",
-        "@aws-sdk/client-s3": "^3.879.0",
-        "@aws-sdk/s3-request-presigner": "^3.879.0",
-        "@middy/core": "^6.4.4",
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-australia_amenity": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
-        "@sparticuz/chromium-min": "^138.0.2",
+        "@sparticuz/chromium-min": "^143.0.0",
         "@turf/turf": "7.2.0",
         "async-retry": "^1.3.3",
         "cheerio": "1.1.2",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
-        "puppeteer-core": "^24.19.0",
+        "playwright": "^1.57.0",
         "zod": "4.0.17"
     },
     "type": "module"
