--- a/apps/service-scrape/function-scrape_locality_trigger/package.json
+++ b/apps/service-scrape/function-scrape_locality_trigger/package.json
@@ -3,17 +3,14 @@
     "private": true,
     "scripts": {
         "format": "biome format --write",
-        "test:type": "tsc",
-        "test:unit": "vitest run --coverage",
-        "test:dev": "vitest --coverage"
+        "test:type": "tsc"
     },
     "devDependencies": {
         "@testcontainers/localstack": "^11.5.1",
         "pino-pretty": "13.1.1"
     },
     "dependencies": {
-        "@aws-lambda-powertools/parser": "^2.25.2",
-        "@aws-sdk/client-sqs": "^3.876.0",
+        "@aws-sdk/client-batch": "^3.948.0",
         "@middy/core": "^6.4.4",
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-australia_amenity": "workspace:*",
