--- a/.github/workflows/ci-clean.yaml
+++ b/.github/workflows/ci-clean.yaml
@@ -17,6 +17,15 @@ jobs:
       - name: Setup dependencies Nx
         uses: ./.github/actions/setup-cd
 
+      - name: Cache .sst folder
+        uses: actions/cache@v4
+        with:
+          path: .sst
+          key: sst-cache-${{ github.job }}-${{ github.run_id }}
+          restore-keys: |
+            sst-cache-${{ github.job }}-
+            sst-cache-
+
       - name: Remove SST infrastructure
         run: pnpm sst remove --stage ${{ github.event.ref }}
         env:
