step function for aws batch

--- a/apps/service-scrape/function-scrape_locality_trigger/package.json
+++ b/apps/service-scrape/function-scrape_locality_trigger/package.json
@@ -10,7 +10,7 @@
         "pino-pretty": "13.1.1"
     },
     "dependencies": {
-        "@aws-sdk/client-batch": "^3.948.0",
+        "@aws-sdk/client-sfn": "^3.958.0",
         "@middy/core": "^6.4.4",
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-australia_amenity": "workspace:*",
