--- a/apps/service-scrape/function-scrape_locality_trigger/package.json
+++ b/apps/service-scrape/function-scrape_locality_trigger/package.json
@@ -6,8 +6,7 @@
         "test:type": "tsc"
     },
     "devDependencies": {
-        "@testcontainers/localstack": "^11.5.1",
-        "pino-pretty": "13.1.1"
+        "@testcontainers/localstack": "^11.5.1"
     },
     "dependencies": {
         "@aws-sdk/client-sfn": "^3.958.0",
