--- a/apps/service-scrape/function-scrape_postprocess/package.json
+++ b/apps/service-scrape/function-scrape_postprocess/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@service-scrape/function-scrape_locality_trigger",
+    "name": "@service-scrape/function-scrape_postprocess",
     "private": true,
     "scripts": {
         "format": "biome format --write",
@@ -9,11 +9,11 @@
         "@testcontainers/localstack": "^11.5.1"
     },
     "dependencies": {
-        "@aws-sdk/client-sfn": "^3.958.0",
         "@middy/core": "^6.4.4",
         "@observability/lib-opentelemetry": "workspace:*",
-        "@service-scrape/lib-australia_amenity": "workspace:*",
+        "@service-scrape/lib-db_service_scrape": "workspace:*",
         "http-status-codes": "^2.3.0",
+        "kysely": "0.28.4",
         "zod": "4.0.17"
     },
     "type": "module"
