--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -7,7 +7,8 @@
         "dev": "node esbuild.ts && docker compose up --build --force-recreate",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
-        "test:dev": "vitest --coverage"
+        "test:dev": "vitest --coverage",
+        "generate": "node node_modules/@service-scrape/lib-db_service_scrape/src/dev/sqlcGenerate.ts"
     },
     "devDependencies": {
         "@types/async-retry": "^1.4.9",
@@ -25,6 +26,7 @@
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
         "playwright": "^1.57.0",
+        "postgres": "^3.4.8",
         "zod": "4.0.17"
     },
     "type": "module"
