--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -8,15 +8,18 @@
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
         "test:dev": "vitest --coverage",
-        "generate": "node node_modules/@service-scrape/lib-db_service_scrape/src/dev/sqlcGenerate.ts"
+        "watch:gen": "node node_modules/@service-scrape/lib-db_service_scrape/src/dev/generatePgtyped.ts"
     },
     "devDependencies": {
+        "@pgtyped/cli": "^2.4.3",
         "@types/async-retry": "^1.4.9",
+        "@types/pg": "8.15.5",
         "chromium-bidi": "^8.0.0",
         "esbuild": "^0.27.0"
     },
     "dependencies": {
         "@observability/lib-opentelemetry": "workspace:*",
+        "@pgtyped/runtime": "^2.4.2",
         "@service-scrape/lib-australia_amenity": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "@sparticuz/chromium-min": "^143.0.0",
@@ -25,8 +28,8 @@
         "cheerio": "1.1.2",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
+        "pg": "8.16.3",
         "playwright": "^1.57.0",
-        "postgres": "^3.4.8",
         "zod": "4.0.17"
     },
     "type": "module"
