feat: typesafe query using Pgtyped and Safeql (#65)
- more accurate model types
- fix same day upsert bug
- prefer raw sql for separate cases
- added sql linting with Safeql (evaluating)
- Pgtyped code generation (evaluating)

Currently leaning towards PgTyped for sql query creation

--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -7,15 +7,23 @@
         "dev": "node esbuild.ts && docker compose up --build --force-recreate",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
-        "test:dev": "vitest --coverage"
+        "test:dev": "vitest --coverage",
+        "watch:gen": "npx pgtyped -w --config node_modules/@service-scrape/lib-db_service_scrape/src/dev/pgtyped.json"
     },
     "devDependencies": {
+        "@pgtyped/cli": "^2.4.3",
+        "@ts-safeql/eslint-plugin": "^4.1.0",
         "@types/async-retry": "^1.4.9",
+        "@types/pg": "8.15.5",
         "chromium-bidi": "^8.0.0",
-        "esbuild": "^0.27.0"
+        "esbuild": "^0.27.0",
+        "eslint": "^9.39.2",
+        "libpg-query": "^17.7.3",
+        "typescript-eslint": "^8.52.0"
     },
     "dependencies": {
         "@observability/lib-opentelemetry": "workspace:*",
+        "@pgtyped/runtime": "^2.4.2",
         "@service-scrape/lib-australia_amenity": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "@sparticuz/chromium-min": "^143.0.0",
@@ -24,6 +32,7 @@
         "cheerio": "1.1.2",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
+        "pg": "8.16.3",
         "playwright": "^1.57.0",
         "zod": "4.0.17"
     },
