feat: better sql support (#66)
- add postgres language server to lint sql against database
- fix sql issues

--- a/.gitignore
+++ b/.gitignore
@@ -21,15 +21,11 @@ node_modules
 .github/instructions/nx.instructions.md
 
 # Env
-.env
+.env*
 
 # System Files
 .DS_Store
 Thumbs.db
-
-# IDE
-.vscode
-.idea
 
 # sst
 .sst
