remove pgtyped causing issues

--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -7,9 +7,7 @@
         "dev": "node esbuild.ts && docker compose up --build --force-recreate",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
-        "test:dev": "vitest --coverage",
-        "test:sql": "postgres-language-server check --changed",
-        "watch:gen": "npx pgtyped -w --config node_modules/@service-scrape/lib-db_service_scrape/src/dev/pgtyped.json"
+        "test:dev": "vitest --coverage"
     },
     "devDependencies": {
         "@pgtyped/cli": "^2.4.3",
