--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -24,7 +24,10 @@
     "devDependencies": {
         "@faker-js/faker": "9.9.0",
         "@types/pg": "8.15.5",
-        "kysely-codegen": "0.18.5",
+        "kanel": "^3.16.0",
+        "kanel-kysely": "^0.8.0",
+        "kanel-zod": "^1.7.0",
+        "kysely-codegen": "0.19.0",
         "pino-pretty": "13.1.1",
         "testcontainers": "^11.5.1",
         "ts-to-zod": "^5.1.0"
