--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -4,13 +4,13 @@
     "exports": {
         ".": "./src/index.ts",
         "./dev": "./src/dev/index.ts",
-        "./zod": "./src/schema-read-zod.ts"
+        "./zod": "./src/schema-read-zod.ts",
+        "./schema": "./src/schema-read-zod.ts"
     },
     "scripts": {
         "format": "biome format --write",
         "migrate": "node ./migrate.ts",
-        "generate": "node ./generate.ts && biome format --write",
-        "zod": "ts-to-zod src/schema-read-zod.ts src/schema-read-zod.ts && biome format --write",
+        "generate": "node ./generate.ts && barrelsby -d src/schema && biome format --write",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
         "test:dev": "vitest --coverage"
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@faker-js/faker": "9.9.0",
         "@types/pg": "8.15.5",
+        "barrelsby": "^2.8.1",
         "kanel": "^3.16.0",
         "kanel-kysely": "^0.8.0",
         "kanel-zod": "^1.7.0",
