--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
         "@biomejs/biome": "2.2.3",
         "@postgres-language-server/cli": "^0.19.0",
         "@pulumi/pulumi": "^3.212.0",
+        "@ts-safeql/eslint-plugin": "^4.1.0",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.25.9",
+        "eslint": "^9.39.2",
         "knip": "5.63.1",
+        "libpg-query": "^17.7.3",
         "nx": "21.5.2",
         "simple-git-hooks": "2.13.1",
         "sst": "3.17.25",
@@ -31,10 +34,7 @@
         "typescript": "~5.9.2",
         "typescript-eslint": "^8.52.0",
         "vite": "^7.1.10",
-        "vitest": "3.2.4",
-        "@ts-safeql/eslint-plugin": "^4.1.0",
-        "eslint": "^9.39.2",
-        "libpg-query": "^17.7.3"
+        "vitest": "3.2.4"
     },
     "simple-git-hooks": {
         "pre-commit": "pnpm format && pnpm lint"
