biome disable nonull

--- a/biome.json
+++ b/biome.json
@@ -18,6 +18,9 @@
                 "noExplicitAny": "warn",
                 "noUnknownAtRules": "off",
                 "noTsIgnore": "off"
+            },
+            "style": {
+                "noNonNullAssertion": "info"
             }
         }
     },
