--- a/apps/service-scrape/function-query_freemium/package.json
+++ b/apps/service-scrape/function-query_freemium/package.json
@@ -6,7 +6,7 @@
     },
     "scripts": {
         "format": "biome format --write",
-        "build": "node api/openapi.ts && biome format --write",
+        "build": "tsx api/openapi.ts && biome format --write",
         "test:type": "tsc",
         "test:lint": "biome lint && eslint"
     },
