--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "simple-git-hooks": "2.13.1",
         "sst": "3.17.25",
         "syncpack": "14.0.0-alpha.19",
+        "tsx": "^4.21.0",
         "typescript": "~5.9.2",
         "typescript-eslint": "^8.52.0",
         "vite": "^7.1.10",
