--- a/apps/frontend/web/tsconfig.json
+++ b/apps/frontend/web/tsconfig.json
@@ -1,23 +1,12 @@
 {
-    "include": ["**/*.ts", "**/*.tsx", "**/dist", "**/.sst"],
+    "extends": "../../../tsconfig.json",
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["src/components/ui/*.tsx"],
     "compilerOptions": {
-        "target": "ES2022",
-        "jsx": "react-jsx",
+        "target": "ESNext",
         "module": "ESNext",
-        "lib": ["ES2022", "DOM", "DOM.Iterable"],
-        "types": ["vite/client"],
-        /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
-        "verbatimModuleSyntax": true,
-        "noEmit": true,
-        /* Linting */
-        "skipLibCheck": true,
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true,
+        "jsx": "react-jsx",
+        "lib": ["ESNext", "DOM", "DOM.Iterable"],
         "paths": {
             "@/*": ["./src/*"]
         }
