--- a/apps/service-scrape/lib-australia_amenity/package.json
+++ b/apps/service-scrape/lib-australia_amenity/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "format": "biome format --write",
         "test:type": "tsc",
-        "generate": "node ./src/compress.ts && pnpm format"
+        "generate": "tsx ./src/compress.ts && pnpm format"
     },
     "type": "module",
     "dependencies": {
