--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.25.9",
         "eslint": "^9.39.2",
+        "jscpd": "^4.0.7",
         "knip": "5.63.1",
         "libpg-query": "^17.7.3",
         "nx": "21.5.2",
