--- a/apps/service-scrape/function-scrape_postprocess/package.json
+++ b/apps/service-scrape/function-scrape_postprocess/package.json
@@ -5,16 +5,12 @@
         "format": "biome format --write",
         "test:type": "tsc"
     },
-    "devDependencies": {
-        "@testcontainers/localstack": "^11.5.1"
-    },
     "dependencies": {
         "@middy/core": "^6.4.4",
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "http-status-codes": "^2.3.0",
-        "kysely": "0.28.4",
-        "zod": "4.0.17"
+        "kysely": "0.28.4"
     },
     "type": "module"
 }
