--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -29,8 +29,7 @@
         "kanel-zod": "^1.7.0",
         "kysely-codegen": "0.19.0",
         "pino-pretty": "13.1.1",
-        "testcontainers": "^11.5.1",
-        "ts-to-zod": "^5.1.0"
+        "testcontainers": "^11.5.1"
     },
     "type": "module"
 }
