--- a/package.json
+++ b/package.json
@@ -7,24 +7,22 @@
         "docker:down": "docker compose down -v",
         "docker:up": "docker compose up --build -d",
         "format": "biome format --write",
-        "git:b": "git checkout -b",
-        "git:m": "git checkout main && git pull",
         "graph": "pnpm nx graph",
         "knip": "knip",
-        "lint": "biome lint --write",
+        "lint": "biome lint --write && jscpd",
         "postinstall": "simple-git-hooks",
         "preinstall": "npx only-allow pnpm",
         "test": "nx run-many -t test:type test:unit"
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.3",
-        "@postgres-language-server/cli": "^0.19.0",
         "@pulumi/pulumi": "^3.212.0",
         "@ts-safeql/eslint-plugin": "^4.1.0",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.25.9",
         "eslint": "^9.39.2",
+        "jscpd": "^4.0.7",
         "knip": "5.63.1",
         "libpg-query": "^17.7.3",
         "nx": "21.5.2",
