--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "nx run-many -t build",
         "bump": "exec syncpack update && exec syncpack fix && pnpm i",
         "docker:down": "docker compose down -v",
-        "docker:up": "docker compose up --build -d",
+        "docker:up": "docker compose up --build -d && pnpm -r migrate",
         "format": "biome format --write",
         "graph": "pnpm nx graph",
         "knip": "knip",
@@ -29,7 +29,7 @@
         "simple-git-hooks": "2.13.1",
         "sst": "3.17.25",
         "syncpack": "14.0.0-alpha.19",
-        "tsx": "^4.21.0",
+        "tsx": "^4.20.3",
         "typescript": "~5.9.2",
         "typescript-eslint": "^8.52.0",
         "vite": "^7.1.10",
